sprint_6_review_fixes